# CastPay

./: README.md  pnpm-lock.yaml
backend/: backend-docs.md  package.json
backend/deploy/: deploy.js
backend/src/: app.js  relayer.js  server.js
backend/src/config/: constants.js
backend/src/controllers/: metaController.js  paymasterController.js  paymentController.js  userController.js
backend/src/middleware/: auth.js  validation.js
backend/src/models/: Transaction.js  UserCache.js
backend/src/routes/: index.js  metaRoutes.js  miscRoutes.js  paymasterRoutes.js  paymentRoutes.js  userRoutes.js
backend/src/scripts/: configure-paymaster.js  debug-stylus.js  initialize-contract.js  setup-contract.js  setup-paymaster.js  test-sponsorship.js
backend/src/services/: blockchainService.js  cacheService.js  paymasterService.js  paymentService.js  userService.js
backend/src/tests/: fund-paymaster.js  test-endpoints.js
backend/tests/: test-endpoints.js
contracts/template/: CONTRACT_README.md  Cargo.toml  CastPayPaymaster.json  deploy.js  deployment-info.json  frontend-integration.md  rust.rs
contracts/template/src/: lib.rs  main.rs
frontend/: config.local.js  env.example  index.html  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  main.tsx  wagmi.ts
frontend/src/components/: ActionBar.tsx  BalanceCard.tsx  Header.tsx  Layout.tsx  Transactions.tsx
frontend/src/components/modals/: ConfirmPaymentModal.tsx  ReceiveModal.tsx  SendPaymentModal.tsx  SuccessModal.tsx
frontend/src/components/ui/: Button.tsx  (+3 more)
frontend/src/lib/: api.ts
