[package]
name = "castpay_paymaster"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/your-org/castpay"
repository = "https://github.com/your-org/castpay"
keywords = ["arbitrum", "ethereum", "stylus", "paymaster", "erc4337"]
description = "CastPay Paymaster contract - ERC-4337 compatible gas sponsorship for USDC payments via social usernames"

[dependencies]
stylus-sdk = { version = "=0.9.0", default-features = false }
mini-alloc = "0.4.2"
openzeppelin-stylus = { git = "https://github.com/OpenZeppelin/rust-contracts-stylus", tag = "v0.2.0", default-features = false }

alloy-primitives = { version = "=0.8.20", default-features = false, features = ["tiny-keccak"] }
alloy-sol-types = { version = "=0.8.20", default-features = false }

[dev-dependencies]
motsu = "0.2.1"

alloy = { version = "1.0.36", features = [
  "contract",
  "network",
  "providers",
  "provider-http",
  "rpc-client",
  "rpc-types-eth",
  "signer-local",
  "getrandom",
] }

[features]
export-abi = ["stylus-sdk/export-abi", "openzeppelin-stylus/export-abi"]

[[bin]]
name = "castpay"
path = "src/main.rs"

[lib]
crate-type = ["lib", "cdylib"]
path = "src/lib.rs"

[profile.release]
codegen-units = 1
panic = "abort"
opt-level = "z"
strip = true
lto = true
debug = false
rpath = false
debug-assertions = false
incremental = false